--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,7 +87,7 @@ jobs:
             --build-arg VECTORIZER_PATH=${{ secrets.VECTORIZER_PATH }} \
             -t ${{ secrets.DOCKER_USERNAME }}/sentiment-analysis-api:latest .
 
-          docker tag ${{ secrets.DOCKER_USERNAME }}/sentiment-analysis-api:latest
+          docker tag ${{ secrets.DOCKER_USERNAME }}/sentiment-analysis-api:latest huggingface.co/${{ secrets.HUGGINGFACE_USERNAME }}/sentiment-analysis-api:latest
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
